--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-node-test</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>热门图书管理</title>
+    <!-- 字体图标样式 -->
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_923480_s663wurpy5.css">
   </head>
   <body>
     <div id="app"></div>
